static/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
/* Global settings  */

body {
	font-family: nunito;
}

.center-align {
	display: flex;
	justify-content: center;

}

.row .col.s10 {
	margin-left: 0;
}

.flash {
	text-align: center;
	color: #462355;
}

h3 {
	margin-bottom: 40px;
	text-align: center;
	font-family: "caveat";
}

.nodisplay {
	display: none;
}

.search {
	margin-top: 50px;
}

.logo {
	width: 150px;
	margin-left: 50px;
}

/* index page  */

h4 {
	margin-left: 40px;
	margin-top: 20px;
	margin-bottom: 30px;
	font-family: "caveat";
	color: #462355;
}

p {
	display: flex;
	justify-content: space-between;
}

.img-spacing {
	width: 205px;
	height: 330px;
	margin-bottom: 20px;
}

.upcoming-spacing {
	width: 205px;
	min-height: 380px;
}

.row-margin {
	margin-left: 50px;
	margin-right: 50px;
}

.upcoming-header {
	display: flex;
	flex-wrap: wrap;
	margin-top: 40px;
	margin-bottom: 10px;
}

.admin-edit {
	margin-top: 10px;
	margin-left: 20px;
}

strong {
	font-weight: bold;
}

.modal-header {
	display: flex;
	justify-content: space-between;
}

/* add drama  */

.button-container {
	display: flex;
	justify-content: center;
	gap: 25px;
}

/* star rating  */

.rating-wrap {
	max-width: 600px;
	margin: auto;
	padding: 15px;
	text-align: center;
}

.star-cont {
	display: flex;
	align-items: center;
	justify-content: center;
	gap: 25px;
}

#rating-value {
	width: 120px;
	margin: 20px auto 0;
	text-align: center;
	font-size: 20px;
}

/*styling star rating*/
.rating {
	border: none;
	/* float: left; */
}

.rating>input {
	display: none;
}

.rating>label:before {
	content: '\f005';
	font-family: FontAwesome;
	margin: 5px;
	font-size: 1.5rem;
	display: inline-block;
	cursor: pointer;
}

.rating>label {
	color: #ddd;
	float: right;
	cursor: pointer;
}

.rating>input:checked~label,
.rating:not(:checked)>label:hover,
.rating:not(:checked)>label:hover~label {
	color: #2ce679;
}

.rating>input:checked+label:hover,
.rating>input:checked~label:hover,
.rating>label:hover~input:checked~label,
.rating>input:checked~label:hover~label {
	color: #2ddc76;
}

h2 {
	text-align: center;
}

/* My list  */

.dropdown-trigger {
	display: flex;
	justify-content: center;
	margin: 30px 30px 30px 30px;
}

.drama-header {
	margin-bottom: 0;
}

.header-margin {
	margin-top: 50px;
	margin-bottom: 0;
}

.menu-container {
	display: flex;
	justify-content: center;
}

#status-menu-container {
	margin-bottom: 50px;
	background-color: #7b1fa2;
	min-height: 70px;
	display: flex;
	align-items: center;
	width: 90%;
	line-height: 0%;
	cursor: pointer;
}

#status-menu-container ul {
	display: flex;
	flex-wrap: wrap;
	padding-top: 10px;
	padding-bottom: 10px;
	color: rgb(171, 206, 244);

}

#status-menu-container li:hover {
	color: aliceblue;
}

#status-menu {
	display: flex;
	justify-content: center;
	gap: 50px;
	width: 100%;
	font-size: 20px;
}

.show-table {
	width: 90%;
	margin: auto;
}


.thumb-container {
	width: 80px;
	height: 80px;
	overflow: hidden;
	border-radius: 8px;
}

.thumbnail {
	width: 100%;
	height: 100%;
	object-fit: cover;
	border-radius: 5px;
}

.thumb-box {
	width: 90px;
}

/* sign in  */
.form-btn {
	width: 180px;
}

.sign-in-footer {
	display: flex;
	gap: 25px;
	justify-content: center;
}

/* Profile  */

h6 {
	text-align: center;
	font-weight: bold;
	margin-bottom: 40px;
}

.profile-header {
	display: flex;
	width: 100%;
	justify-content: center;
	align-items: center;
	gap: 25px;
}

.images {
	max-width: 200px;
	max-height: 285px;
}

.carousel-item {
	margin-top: -70px;
}

.delete-section {
	display: flex;
	justify-content: space-between;
	margin-top: 50px;
}

.button-margin {
	margin-bottom: 5px;
}

/* media queries  */

@media only screen and (max-width: 455px) {
	.profile-header {
		gap: 0;
		padding-right: 20px;
	}

	.row-margin {
		margin-bottom: 10px;
	}

	.img-spacing {
		margin-bottom: 10px;
	}

	h5 {
		margin-left: 0;
	}

}

@media only screen and (max-width: 500px) {
	.table-col {
		display: none;
	}

	.no-margin {
		margin: 0;
	}

	h4 {
		margin-left: 0;
	}
}

@media only screen and (max-width: 560px) {
	.rating {
		display: flex;
		flex-wrap: wrap-reverse;
		flex-direction: row-reverse;
	}
}

@media only screen and (max-width: 600px) {
	.search {
		margin: 0;
	}
}

@media only screen and (min-width: 700px) {
	.dropdown-trigger {
		display: none;
	}

}

@media only screen and (max-width: 700px) {
	.menu-container {
		display: none;
	}
}

@media only screen and (max-width: 800px) {
	#status-menu {
		font-size: 15px;
	}

	.menu-container {
		margin-top: 20px;
	}

}

@media only screen and (max-width: 864px) {
	#status-menu li {
		padding-top: 10px;
	}

	#menu-dropped {
		padding-bottom: 10px;
	}
}

